<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.numberlist.NumberListFragment">

    <TextView
        android:id="@+id/number_list_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/number_list_" />

</FrameLayout>